tdf#97501: crash in SwDBManager fixed

copy the connections to a temp container and iterate that because
disposing connections changes the data source params container

Change-Id: I06c59a19a6bcf97a541b32481d1d2a63f5c34032
Reviewed-on: https://gerrit.libreoffice.org/22027
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
(cherry picked from commit 4426c20cf308f3bf7a2d3b33f9996687113c22e3)
Reviewed-on: https://gerrit.libreoffice.org/26304
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 00a988896755dd9066d62892d38da0efe769493c)